# octos-one-watch

./: .gitignore  README.md  aichat  makepad  octos
a2app/: framework.md
a2app/apps/activity/: app.md  lint.json
a2app/apps/news/: app.md  lint.json
a2app/apps/news/exemplars/: news-canonical.splash
a2app/apps/stock/: app.md  lint.json
a2app/apps/stock/exemplars/: stock-canonical.splash  stock-movers.splash
a2app/apps/weather/: app.md  lint.json
a2app/apps/weather-activity/: app.md  lint.json
a2app/apps/weather/exemplars/: weather-canonical.splash
a2app/apps/web/: app.md
a2app/apps/youtube/: app.md
a2app/framework/: splash-manual.md
a2app/widgets/: containers.md  design-system.md  interaction.md  sys-helpers.md  weather-icon.md
app/: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
app/.github/workflows/: ci.yml  nightly.yml
app/app/: Cargo.toml
app/app/resources/android/: AndroidManifest.xml.template  gen_icons.py
app/app/src/: main.rs  movers_template.splash
app/app/src/app/: approvals.rs  card_lint.rs  coding.rs  content_browser.rs  diagram_safety.rs  login.rs  mod.rs  octo_thinking.rs  producers.rs  sessions.rs  task_dock.rs  viewers.rs  voice.rs  voice_web.rs
app/app/src/backend/: mod.rs  octos_ui.rs
app/crates/octos-app-render/: Cargo.toml
app/crates/octos-app-render/src/: lib.rs
app/crates/octos-app-store/: Cargo.toml
app/crates/octos-app-store/src/: approvals.rs  auth.rs  files.rs  keychain.rs  lib.rs  navigation.rs  sessions.rs  state.rs  tasks.rs  toasts.rs  turns.rs
app/crates/octos-app-transport/: Cargo.toml
app/crates/octos-app-transport/src/: lib.rs  proto.rs
app/crates/octos-app-transport/src/capability/: mod.rs
app/crates/octos-app-transport/src/cursor/: mod.rs
app/crates/octos-app-transport/src/jsonrpc/: mod.rs
app/crates/octos-app-transport/src/rest/: mod.rs
app/crates/octos-app-transport/src/stdio/: mod.rs
app/crates/octos-app-transport/src/ws/: mod.rs
app/crates/octos-app-transport/tests/: contract_tool_started.rs  live_smoke.rs
app/scripts/: smoke-live.sh
docs/: ADDING-AN-APP-CARD.md  ARCHITECTURE.md  BUILDING-ANDROID.md  PROVISIONING-LLM.md  SYSTEM-APP.md  TESTING-WATCH-UI.md  VARIANT-BUILD.md  watch-voice-assistant.html  watch-webview-poc.html  youtube-watch-reference.html
patches/: 0001-composer-mono-theme.patch  0002-webcard-shell-navigation.patch  0003-android-composer-voice-event.patch  0004-android-composer-voice-menu.patch
scripts/: build_memory.py  llm_qr.py
tools/llm-qr/: Cargo.toml
tools/llm-qr/src/: main.rs
