[package]
name        = "octos-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native Makepad-Splash desktop client for the Octos agentic OS"

[[bin]]
name = "octos-app"
path = "src/main.rs"

# Android: `cargo makepad android build` compiles the app as a cdylib
# (`cargo rustc --lib --crate-type=cdylib`); `app_main!` emits the JNI
# entrypoints instead of `fn main` there. Declaring the lib target keeps that
# build inside the real workspace (cargo-makepad's fallback wrapper manifest
# can't inherit `workspace.package` fields or `workspace = true` deps).
[lib]
name = "octos_app"
path = "src/main.rs"

[dependencies]
# Makepad — path-deps to the aichat fork in ../../aichat (sibling repo).
# Same set as aichat/examples/aichat.
makepad-widgets     = { path = "../../aichat/widgets", features = ["maps", "pdf"] }
makepad-code-editor = { path = "../../aichat/code_editor" }
makepad-ai          = { path = "../../aichat/libs/makepad_ai" }

# Inline-renderer kits (git deps — same as aichat).
streaming-markdown-kit = { git = "https://github.com/Project-Robius-China/streaming-markdown-kit.git", branch = "main", features = ["mermaid"] }
makepad-diagram-kit    = { git = "https://github.com/Project-Robius-China/makepad-diagram-kit.git", branch = "main", features = ["makepad"] }

# Cross-platform URL opener.
robius-open = { git = "https://github.com/project-robius/robius" }

# Internal crates (filled in across W01-W08).
# `keychain` feature on the store crate flips on the OS-keychain wrappers
# (`octos_app_store::keychain::{store_token, load_token, delete_token}`) used
# by W08's LoginScreen + Logout flow.
octos-app-store     = { workspace = true, features = ["keychain"] }
octos-app-transport = { workspace = true }
octos-app-render    = { workspace = true }

# Protocol types.
octos-core = { workspace = true }

# Wire helpers re-used by the app: `Url` for `TransportConfig::base_url`.
url = { workspace = true }

# `tokio` runtime owned by `OctosUiAgent` — `octos-app-transport::ws::spawn`
# uses `tokio::spawn` so the agent enters an owned runtime context. The rest
# of `app/` does not see tokio. W08 also uses a single-threaded runtime
# inside a `std::thread::spawn` for off-thread `RestClient::send_code` /
# `verify` so the LoginScreen's button clicks don't block the UI thread.
tokio = { workspace = true, features = ["rt-multi-thread"] }

# JSON helper used by `OctosUiAgent::send_tool_result` to wrap placeholder
# tool result payloads, and by W08's LoginScreen to read/write
# `~/.config/octos-app/server.json`. Reuses the workspace pin.
serde_json = { workspace = true }

# `serde` derives are required by W08's `ServerConfig` (read/written via
# `serde_json` above). Adding here so `cargo check -p octos-app` clears
# without forcing the W08 lane to coordinate. Reuses the workspace pin.
serde = { workspace = true }

# W04 — `app/src/app/sessions.rs` projects wire `SessionListItem` (carries
# `chrono::DateTime<Utc>` from `octos-app-transport::rest`) to the store's
# `Session` and falls back to `Utc::now()` when the server omits a timestamp.
# Reuses the workspace pin.
chrono = { workspace = true }

# Used directly by W08's LoginScreen — constructs an anonymous `RestClient`
# (no bearer yet) for `send_code` / `verify` calls during login. Already
# transitively pulled in by `octos-app-transport`; the explicit dep here is
# for `reqwest::Client::new()` from the LoginScreen path.
reqwest = { workspace = true }

# OS integration.
keyring = { workspace = true }
# `log` is re-exported via makepad-widgets — adding it here would shadow that
# glob and break aichat-lifted `log::warn!` calls. Don't add it back.
