# Dev/ops tool — NOT part of the app build. Encodes an octos LLM config as a QR
# the app composer scans to provision a key on-device. Rust replacement for the
# former scripts/llm_qr.py (this repo is Rust — no Python).
#   cargo run --manifest-path tools/llm-qr/Cargo.toml -- --family zai --model glm-5.2 --key sk-XXXX
[package]
name = "llm-qr"
version = "0.1.0"
edition = "2021"
description = "Encode an octos LLM config as a QR the app composer scans to provision itself"
publish = false

[[bin]]
name = "llm-qr"
path = "src/main.rs"

[dependencies]
qrcode = { version = "0.14", default-features = false }
serde_json = "1"
