[package]
name        = "octos-app-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Streaming-markdown renderer wrappers used by octos-app — keeps Makepad widgets out of octos-app-store"

[dependencies]
streaming-markdown-kit = { git = "https://github.com/Project-Robius-China/streaming-markdown-kit.git", branch = "main", features = ["mermaid"] }

[lints]
workspace = true
