[package]
name        = "octos-app-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AppState reducer + selectors for octos-app (Makepad-free, easy to test)"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
octos-core  = { workspace = true }
keyring     = { workspace = true, optional = true }
# Android keychain-fallback diagnostics (`crate::keychain` file-store path).
log         = { workspace = true }

[features]
# OS-keychain helpers (`crate::keychain`). Off by default so unit tests stay
# hermetic; the binary in `app/` enables it.
keychain = ["dep:keyring"]

[dev-dependencies]

[lints]
workspace = true
